// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Artifact WizardStep tests last step data without initial values 1`] = `
<div>
  <div
    class="StepWizard--main existingDocker StepWizard--navBar"
  >
    <div
      class="StepWizard--navBarList"
    >
      <div
        class="StepWizard--navStep StepWizard--activeStep"
      >
        <span
          class="StepWizard--number"
        >
          1
        </span>
        <p
          class="StyledProps--font Text--lineclamp StyledProps--main StepWizard--stepName"
          style="--text-line-clamp: 2; width: 200px;"
        >
          connectors.artifactRepoType
        </p>
        <p
          class="StyledProps--font Text--lineclamp StyledProps--main StepWizard--stepName"
          style="--text-line-clamp: 2; width: 200px;"
        >
          <div
            class="subtitle"
            style="display: flex;"
          >
            <span
              class="bp3-icon StyledProps--main"
              data-icon="info"
            >
              <svg
                height="26"
                viewBox="0 0 12 12"
                width="26"
                xmlns="http://www.w3.org/2000/svg"
              >
                <defs />
                <path
                  clip-rule="evenodd"
                  d="M0 6c0 3.31371 2.68629 6 6 6s6-2.68629 6-6-2.68629-6-6-6-6 2.68629-6 6zm.75 0c0 2.8995 2.35051 5.25 5.25 5.25 2.8995 0 5.25-2.3505 5.25-5.25C11.25 3.10051 8.8995.75 6 .75 3.10051.75.75 3.10051.75 6zm4.2063 3.104v.646h2.6814v-.646l-.8357-.14355V4.20264H4.9563v.65112l.83569.14355v3.96314L4.9563 9.104zM6.802 1.75195v1.03052H5.79199V1.75195H6.802z"
                  fill-rule="evenodd"
                />
              </svg>
            </span>
            <span
              style="align-self: center;"
            >
              dockerRegistry
            </span>
          </div>
        </p>
      </div>
      <div
        class="StepWizard--navStep"
      >
        <span
          class="StepWizard--number"
        >
          2
        </span>
        <p
          class="StyledProps--font Text--lineclamp StyledProps--main StepWizard--stepName"
          style="--text-line-clamp: 2; width: 200px;"
        >
          connectors.artifactRepository
        </p>
      </div>
      <div
        class="StepWizard--navStep"
      >
        <span
          class="StepWizard--number"
        >
          3
        </span>
        <p
          class="StyledProps--font Text--lineclamp StyledProps--main StepWizard--stepName"
          style="--text-line-clamp: 2; width: 200px;"
        >
          Artifact Location
        </p>
      </div>
    </div>
    <div
      class="StepWizard--stepDetails"
    >
       
      <div
        class="StyledProps--font StyledProps--main optionsViewContainer"
      >
        <p
          class="StyledProps--font StyledProps--main StyledProps--font-variation-h3 StyledProps--margin-bottom-medium"
        >
          first step
        </p>
        <div
          class="OverlaySpinner--overlaySpinner"
        >
          <form>
            <div
              class="headerContainer"
            >
              <div
                class="Layout--horizontal Layout--layout-spacing-large StyledProps--main"
              >
                <div
                  class="bp3-form-group ThumbnailSelect--mainContainer thumbnailSelect"
                >
                  <div
                    class="bp3-form-content"
                  >
                    <div
                      class="Layout--horizontal Layout--layout-spacing-medium StyledProps--main"
                    >
                      <label
                        class="Thumbnail--squareCardContainer"
                      >
                        <div
                          class="bp3-card bp3-elevation-0 Card--card Thumbnail--squareCard Card--selected"
                        >
                          <span
                            class="Card--corner"
                          >
                            <span
                              class="Card--badge"
                            />
                            <span
                              class="bp3-icon StyledProps--main StyledProps--color StyledProps--color-white"
                              data-icon="main-tick"
                            >
                              <svg
                                height="10"
                                viewBox="0 0 11 8"
                                width="10"
                                xmlns="http://www.w3.org/2000/svg"
                              >
                                <path
                                  d="M9.219.894c.356-.38.982-.413 1.398-.072.391.32.457.857.167 1.236l-.06.07-5.138 5.486c-.362.386-.993.41-1.403.068l-.07-.064-3.2-3.214A.88.88 0 01.95 3.098a1.045 1.045 0 011.328-.003l.074.067 2.443 2.454L9.22.894z"
                                  fill="currentColor"
                                />
                              </svg>
                            </span>
                          </span>
                          <span
                            class="bp3-icon StyledProps--main"
                            data-icon="service-dockerhub"
                          >
                            <svg
                              enable-background="new 0 0 14 10"
                              height="26"
                              viewBox="0 0 14 10"
                              width="26"
                              xmlns="http://www.w3.org/2000/svg"
                            >
                              <path
                                d="m5.8 3.3h1.3v1.3h-1.3z"
                              />
                              <path
                                d="m7.2 3.3h1.3v1.3h-1.3z"
                              />
                              <path
                                d="m4.3 3.3h1.3v1.3h-1.3z"
                              />
                              <path
                                d="m2.9 3.3h1.3v1.3h-1.3z"
                              />
                              <path
                                d="m1.4 3.3h1.3v1.3h-1.3z"
                              />
                              <path
                                d="m5.8 1.9h1.3v1.3h-1.3z"
                              />
                              <path
                                d="m5.8.4h1.3v1.3h-1.3z"
                              />
                              <path
                                d="m4.3 1.9h1.3v1.3h-1.3z"
                              />
                              <path
                                d="m2.9 1.9h1.3v1.3h-1.3z"
                              />
                              <path
                                d="m.8 7.7c-.1-.2-.2-.3-.3-.4l-.1-.2c0-.1-.1-.2-.1-.4s0 0 0-.1v-.1c-.2-.4-.3-.8-.3-1.3 0-.1 0-.2 0-.3v-.1h9.5c.7 0 1.4-.2 1.7-.5-.2-.2-.4-.6-.4-1 0-.5.1-1 .3-1.3l.1-.1.1.1c.3.2.9.8.9 1.6.3-.1.5-.1.8-.1.4 0 .7.1.9.2h.1v.1c-.3.6-1 .9-1.8.9-.1 0-.2 0-.3 0-1.2 3-3.7 4.6-7.3 4.6-.6 0-1.2-.1-1.8-.3-.7-.2-1.3-.6-1.8-1.1zm4.4 1.4c-.9-.4-1.3-.9-1.6-1.5-.4.1-.7.1-1.2.2-.2 0-.3 0-.5 0h-.7c.8.8 1.8 1.3 3.6 1.3zm-1-2.4c-.2 0-.3.2-.3.3 0 .2.2.3.3.3.2 0 .3-.2.3-.3s-.1-.3-.3-.3z"
                              />
                              <path
                                d="m4.2 6.8s.1 0 0 0c.1 0 .1.1 0 0 .1.2.1.2.2.2 0 0 .1 0 .1-.1v.1c0 .1-.1.3-.3.3s-.2-.1-.2-.3c0-.1.1-.2.2-.2"
                              />
                            </svg>
                          </span>
                        </div>
                        <p
                          class="StyledProps--font StyledProps--main Thumbnail--label StyledProps--font-weight-semi-bold StyledProps--color StyledProps--color-grey600 StyledProps--margin-top-small"
                        >
                          dockerRegistry
                        </p>
                        <input
                          checked=""
                          name="artifactType"
                          type="checkbox"
                          value="DockerRegistry"
                        />
                      </label>
                      <button
                        class="bp3-button bp3-minimal Button--button StyledProps--font StyledProps--main ThumbnailSelect--changeButton StyledProps--intent-primary Button--without-shadow Button--withLeftIcon"
                        data-testid="thumbnail-select-change"
                        type="button"
                      >
                        <span
                          class="bp3-icon StyledProps--main StyledProps--padding-right-xsmall"
                          data-icon="Edit"
                        >
                          <svg
                            height="12"
                            viewBox="0 0 16 16"
                            width="12"
                            xmlns="http://www.w3.org/2000/svg"
                          >
                            <path
                              clip-rule="evenodd"
                              d="M11.207.485a.5.5 0 0 1 .354-.146 3.5 3.5 0 0 1 3.5 3.5.5.5 0 0 1-.146.353l-11 11a.5.5 0 0 1-.354.147h-3a.5.5 0 0 1-.5-.5v-3a.5.5 0 0 1 .146-.354l11-11Zm.553.862L1.061 12.046v2.293h2.293l10.7-10.7a2.5 2.5 0 0 0-2.294-2.292Z"
                              fill="currentColor"
                              fill-rule="evenodd"
                            />
                            <path
                              clip-rule="evenodd"
                              d="M11.89 2.646a.5.5 0 0 1 0 .708L8.353 6.889a.5.5 0 0 1-.708-.707l3.536-3.536a.5.5 0 0 1 .707 0Z"
                              fill="currentColor"
                              fill-rule="evenodd"
                              opacity="0.3"
                            />
                          </svg>
                        </span>
                        <span
                          class="bp3-button-text"
                        >
                          Change
                        </span>
                      </button>
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="Layout--horizontal StyledProps--main"
            >
              <button
                class="bp3-button Button--button StyledProps--font StyledProps--main Button--with-current-color Button--withRightIcon Button--variation Button--variation-primary"
                type="submit"
              >
                <span
                  class="bp3-button-text"
                >
                  continue
                </span>
                <span
                  class="bp3-icon bp3-icon-chevron-right StyledProps--main"
                  icon="chevron-right"
                >
                  <svg
                    data-icon="chevron-right"
                    height="16"
                    viewBox="0 0 16 16"
                    width="16"
                  >
                    <desc>
                      chevron-right
                    </desc>
                    <path
                      d="M10.71 7.29l-4-4a1.003 1.003 0 00-1.42 1.42L8.59 8 5.3 11.29c-.19.18-.3.43-.3.71a1.003 1.003 0 001.71.71l4-4c.18-.18.29-.43.29-.71 0-.28-.11-.53-.29-.71z"
                      fill-rule="evenodd"
                    />
                  </svg>
                </span>
              </button>
            </div>
          </form>
        </div>
      </div>
    </div>
    <span
      class="bp3-icon StyledProps--main StepWizard--harnessWatermark StyledProps--color StyledProps--color-grey50"
      data-icon="harness-with-color"
    >
      <svg
        height="346"
        viewBox="0 0 25 25"
        width="346"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="m22.9736 8.18585-6.2654-6.30553c-.1103-.11108-1.0951-1.07656-2.5893-1.572117-2.1394-.717703-4.26188-.153793-5.98529 1.572117l-6.26542 6.30553c-.11036.11107-1.069701 1.10219-1.562105 2.60595-.713136 2.1531-.152815 4.2891 1.562105 6.0236l6.26542 6.3055c.11037.1111 1.09517 1.0766 2.58939 1.5807.6112.205 1.214.3076 1.8083.3076 1.5027 0 2.9459-.6408 4.1769-1.8797l6.2654-6.3056c.1104-.111 1.0698-1.1022 1.5622-2.6059.7131-2.1617.1528-4.2977-1.5622-6.03215zm-10.0688-4.4771c.7047.2136 1.231.70061 1.2735.73479l1.8508 1.86261-3.6082 3.63124-3.60811-3.63124 1.85921-1.87115c.5009-.49556 1.1971-1.03384 2.2328-.72625zm-9.21981 8.30485c.21225-.7092.69616-1.2389.73012-1.2816l1.85076-1.86262 3.60813 3.63122-3.60813 3.6313-1.85925-1.8712c-.4924-.5041-1.02726-1.2133-.72163-2.2471zm8.25201 9.2789c-.7046-.2136-1.231-.7006-1.2735-.7348l-1.85071-1.8626 3.60811-3.6313 3.6082 3.6313-1.8593 1.8711c-.5009.4956-1.2055 1.0339-2.2328.7263zm9.2198-8.3049c-.2122.7092-.6961 1.2389-.7301 1.2816l-1.8507 1.8627-3.6082-3.6313 3.6082-3.63122 1.8592 1.87112c.4924.5041 1.0273 1.2047.7216 2.2471z"
          fill="currentColor"
          fill-rule="evenodd"
        />
      </svg>
    </span>
  </div>
</div>
`;

exports[`Artifact WizardStep tests new connector view works correctly 1`] = `
<div>
  <div
    class="StepWizard--main existingDocker StepWizard--navBar"
  >
    <div
      class="StepWizard--navBarList"
    >
      <div
        class="StepWizard--navStep StepWizard--completedStep"
      >
        <span
          class="StepWizard--completedIcon"
        >
          <span
            class="bp3-icon bp3-icon-small-tick StyledProps--main StyledProps--color StyledProps--color-primary7"
            icon="small-tick"
          >
            <svg
              data-icon="small-tick"
              height="20"
              viewBox="0 0 20 20"
              width="20"
            >
              <desc>
                small-tick
              </desc>
              <path
                d="M15 5c-.28 0-.53.11-.71.29L8 11.59l-2.29-2.3a1.003 1.003 0 00-1.42 1.42l3 3c.18.18.43.29.71.29s.53-.11.71-.29l7-7A1.003 1.003 0 0015 5z"
                fill-rule="evenodd"
              />
            </svg>
          </span>
        </span>
        <p
          class="StyledProps--font Text--lineclamp StyledProps--main StepWizard--stepName"
          style="--text-line-clamp: 2; width: 200px;"
        >
          connectors.artifactRepoType
        </p>
        <p
          class="StyledProps--font Text--lineclamp StyledProps--main StepWizard--stepName"
          style="--text-line-clamp: 2; width: 200px;"
        >
          <div
            class="subtitle"
            style="display: flex;"
          >
            <span
              class="bp3-icon StyledProps--main"
              data-icon="info"
            >
              <svg
                height="26"
                viewBox="0 0 12 12"
                width="26"
                xmlns="http://www.w3.org/2000/svg"
              >
                <defs />
                <path
                  clip-rule="evenodd"
                  d="M0 6c0 3.31371 2.68629 6 6 6s6-2.68629 6-6-2.68629-6-6-6-6 2.68629-6 6zm.75 0c0 2.8995 2.35051 5.25 5.25 5.25 2.8995 0 5.25-2.3505 5.25-5.25C11.25 3.10051 8.8995.75 6 .75 3.10051.75.75 3.10051.75 6zm4.2063 3.104v.646h2.6814v-.646l-.8357-.14355V4.20264H4.9563v.65112l.83569.14355v3.96314L4.9563 9.104zM6.802 1.75195v1.03052H5.79199V1.75195H6.802z"
                  fill-rule="evenodd"
                />
              </svg>
            </span>
            <span
              style="align-self: center;"
            >
              dockerRegistry
            </span>
          </div>
        </p>
      </div>
      <div
        class="StepWizard--navStep StepWizard--completedStep"
      >
        <span
          class="StepWizard--completedIcon"
        >
          <span
            class="bp3-icon bp3-icon-small-tick StyledProps--main StyledProps--color StyledProps--color-primary7"
            icon="small-tick"
          >
            <svg
              data-icon="small-tick"
              height="20"
              viewBox="0 0 20 20"
              width="20"
            >
              <desc>
                small-tick
              </desc>
              <path
                d="M15 5c-.28 0-.53.11-.71.29L8 11.59l-2.29-2.3a1.003 1.003 0 00-1.42 1.42l3 3c.18.18.43.29.71.29s.53-.11.71-.29l7-7A1.003 1.003 0 0015 5z"
                fill-rule="evenodd"
              />
            </svg>
          </span>
        </span>
        <p
          class="StyledProps--font Text--lineclamp StyledProps--main StepWizard--stepName"
          style="--text-line-clamp: 2; width: 200px;"
        >
          connectors.artifactRepository
        </p>
      </div>
      <div
        class="StepWizard--navStep StepWizard--activeStep"
      >
        <span
          class="StepWizard--number"
        >
          3
        </span>
        <p
          class="StyledProps--font Text--lineclamp StyledProps--main StepWizard--stepName"
          style="--text-line-clamp: 2; width: 200px;"
        >
          Artifact Location
        </p>
      </div>
    </div>
    <div
      class="StepWizard--stepDetails"
    >
       
      <div
        class="Layout--vertical Layout--layout-spacing-medium StyledProps--main firstep"
      >
        <p
          class="StyledProps--font StyledProps--main StyledProps--font-variation-h3 StyledProps--margin-bottom-medium"
        >
          pipeline.artifactsSelection.artifactDetails
        </p>
        <div
          class="OverlaySpinner--overlaySpinner"
        >
          <form>
            <div
              class="connectorForm"
            >
              <div
                class="imagePathContainer"
              >
                <div
                  class="bp3-form-group"
                >
                  <label
                    class="bp3-label"
                    for="registryHostname"
                  >
                    <span
                      class="Tooltip--acenter"
                      data-tooltip-id="gcrImagePath_registryHostname"
                    >
                      connectors.GCR.registryHostname
                    </span>
                     
                    <span
                      class="bp3-text-muted"
                    />
                  </label>
                  <div
                    class="bp3-form-content"
                  >
                    <div
                      class="Layout--horizontal StyledProps--main MultiTypeInput--main"
                    >
                      <div
                        class="bp3-popover-wrapper MultiTypeInput--select MultiTypeInput--fixedValueInput Select--main bp3-fill"
                      >
                        <div
                          class="bp3-popover-target"
                        >
                          <div
                            class="bp3-input-group"
                          >
                            <input
                              autocomplete="off"
                              class="bp3-input"
                              name="registryHostname"
                              placeholder="common.validation.urlIsRequired"
                              style="padding-right: 0px;"
                              type="text"
                              value=""
                            />
                            <span
                              class="bp3-input-action"
                            >
                              <span
                                class="bp3-icon bp3-icon-chevron-down StyledProps--main StyledProps--padding-small"
                                icon="chevron-down"
                              >
                                <svg
                                  data-icon="chevron-down"
                                  height="14"
                                  viewBox="0 0 16 16"
                                  width="14"
                                >
                                  <desc>
                                    chevron-down
                                  </desc>
                                  <path
                                    d="M12 5c-.28 0-.53.11-.71.29L8 8.59l-3.29-3.3a1.003 1.003 0 00-1.42 1.42l4 4c.18.18.43.29.71.29s.53-.11.71-.29l4-4A1.003 1.003 0 0012 5z"
                                    fill-rule="evenodd"
                                  />
                                </svg>
                              </span>
                            </span>
                          </div>
                        </div>
                      </div>
                      <span
                        class="bp3-popover-wrapper MultiTypeInput--wrapper"
                      >
                        <span
                          class="bp3-popover-target"
                        >
                          <button
                            class="MultiTypeInput--btn MultiTypeInput--FIXED"
                          >
                            <span
                              class="bp3-icon StyledProps--main"
                              data-icon="fixed-input"
                            >
                              <svg
                                height="12"
                                viewBox="0 0 9 9"
                                width="12"
                                xmlns="http://www.w3.org/2000/svg"
                              >
                                <path
                                  d="m5.61 7.55c.62-.7.3-1.42.18-2.35a.32.32 0 0 1 .1-.29l1.43-1.42a.76.76 0 0 1 .28-.15c.39-.1 1 0 1.28-.29a.34.34 0 0 0 0-.51l-2.42-2.42a.33.33 0 0 0 -.52 0c-.28.29-.2.9-.28 1.3a.53.53 0 0 1 -.13.23l-1.44 1.47a.29.29 0 0 1 -.28.09c-.89-.11-1.6-.49-2.27.11-.29.26-.29.43 0 .7l1.31 1.34.15.16-.15.15-2.7 2.69a.36.36 0 0 0 0 .54.36.36 0 0 0 .54-.05l2.63-2.68.17-.17.17.16c.45.46.9.91 1.36 1.36.21.21.42.22.59.03z"
                                  fill="currentColor"
                                />
                              </svg>
                            </span>
                          </button>
                        </span>
                      </span>
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="imagePathContainer"
              >
                <div
                  class="bp3-form-group"
                >
                  <label
                    class="bp3-label"
                    for="imagePath"
                  >
                    <span
                      class="Tooltip--acenter"
                      data-tooltip-id="gcrImagePath_imagePath"
                    >
                      pipeline.imagePathLabel
                    </span>
                     
                    <span
                      class="bp3-text-muted"
                    />
                  </label>
                  <div
                    class="bp3-form-content"
                  >
                    <div
                      class="Layout--horizontal StyledProps--main MultiTypeInput--main"
                    >
                      <div
                        class="bp3-input-group MultiTypeInput--input"
                      >
                        <input
                          autocomplete="off"
                          class="bp3-input"
                          name="imagePath"
                          placeholder="pipeline.artifactsSelection.existingDocker.imageNamePlaceholder"
                          type="text"
                          value=""
                        />
                      </div>
                      <span
                        class="bp3-popover-wrapper MultiTypeInput--wrapper"
                      >
                        <span
                          class="bp3-popover-target"
                        >
                          <button
                            class="MultiTypeInput--btn MultiTypeInput--FIXED"
                          >
                            <span
                              class="bp3-icon StyledProps--main"
                              data-icon="fixed-input"
                            >
                              <svg
                                height="12"
                                viewBox="0 0 9 9"
                                width="12"
                                xmlns="http://www.w3.org/2000/svg"
                              >
                                <path
                                  d="m5.61 7.55c.62-.7.3-1.42.18-2.35a.32.32 0 0 1 .1-.29l1.43-1.42a.76.76 0 0 1 .28-.15c.39-.1 1 0 1.28-.29a.34.34 0 0 0 0-.51l-2.42-2.42a.33.33 0 0 0 -.52 0c-.28.29-.2.9-.28 1.3a.53.53 0 0 1 -.13.23l-1.44 1.47a.29.29 0 0 1 -.28.09c-.89-.11-1.6-.49-2.27.11-.29.26-.29.43 0 .7l1.31 1.34.15.16-.15.15-2.7 2.69a.36.36 0 0 0 0 .54.36.36 0 0 0 .54-.05l2.63-2.68.17-.17.17.16c.45.46.9.91 1.36 1.36.21.21.42.22.59.03z"
                                  fill="currentColor"
                                />
                              </svg>
                            </span>
                          </button>
                        </span>
                      </span>
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="tagGroup"
              >
                <div
                  class="bp3-form-group radioGroup"
                >
                  <div
                    class="bp3-form-content"
                  >
                    <div
                      class="StyledProps--main"
                    >
                      
                      <div
                        class="RadioButtonGroup--inline"
                      >
                        <label
                          class="RadioButton--radio StyledProps--main"
                        >
                          <input
                            checked=""
                            class="RadioButton--input"
                            name="tagType"
                            type="radio"
                            value="value"
                          />
                          <span
                            class="RadioButton--radioIcon"
                          />
                          Value
                        </label>
                        <label
                          class="RadioButton--radio StyledProps--main"
                        >
                          <input
                            class="RadioButton--input"
                            name="tagType"
                            type="radio"
                            value="regex"
                          />
                          <span
                            class="RadioButton--radioIcon"
                          />
                          Regex
                        </label>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="imagePathContainer"
              >
                <div
                  class="bp3-form-group bp3-disabled tagInputButton"
                >
                  <label
                    class="bp3-label"
                    for="tag"
                  >
                    <span
                      class="Tooltip--acenter"
                      data-tooltip-id="gcrImagePath_tag"
                    >
                      tagLabel
                    </span>
                     
                    <span
                      class="bp3-text-muted"
                    />
                  </label>
                  <div
                    class="bp3-form-content"
                  >
                    <div
                      class="Layout--horizontal StyledProps--main MultiTypeInput--main MultiTypeInput--disabled"
                    >
                      <div
                        class="TextInput--main MultiTypeInput--input"
                      >
                        <div
                          class="bp3-input-group bp3-disabled"
                        >
                          <input
                            class="bp3-input"
                            disabled=""
                            name="tag"
                            placeholder="<+input>"
                            type="text"
                            value="<+input>"
                          />
                        </div>
                      </div>
                      <button
                        class="MultiTypeInput--btn MultiTypeInput--RUNTIME"
                        disabled=""
                      >
                        <span
                          class="bp3-icon StyledProps--main"
                          data-icon="runtime-input"
                        >
                          <svg
                            height="12"
                            viewBox="0 0 10 7.97"
                            width="12"
                            xmlns="http://www.w3.org/2000/svg"
                          >
                            <path
                              d="m8.14 4-.14-.28a2.53 2.53 0 0 1 -.12-.3l-.16-.35c-.11-.25-.22-.38-.32-.38s-.28.15-.37.44c-.03-.03-.03-.06-.03-.13a.73.73 0 0 1 .24-.46.66.66 0 0 1 .42-.26c.25 0 .5.35.76 1.05l.07.17.07-.12c.47-.73.86-1.1 1.18-1.1a.71.71 0 0 1 .29.07l-.4.42h-.11c-.24 0-.52.28-.86.83l-.09.16.07.2c.29.79.53 1.18.71 1.18s.31-.12.4-.36q.09.06.09.12t-.27.39a.74.74 0 0 1 -.45.23c-.25 0-.51-.36-.77-1.07l-.12-.25-.1.17c-.44.76-.87 1.14-1.28 1.14a.65.65 0 0 1 -.39-.12l.38-.39a.32.32 0 0 0 .23.1c.25 0 .53-.25.83-.74l.17-.28zm-4-.32-2.44-3.09h2.47s.83-.07 1.18.41a3.28 3.28 0 0 1 .42 1.14h.31l-.14-2.14h-5.94v.31l3.06 3.74-3.06 3.57v.38h6.08l.38-2.36-.31-.07a2.43 2.43 0 0 1 -.52 1c-.42.48-2 .41-2 .41h-2.24z"
                              fill="current-color"
                            />
                          </svg>
                        </span>
                      </button>
                    </div>
                  </div>
                </div>
                <div
                  class="configureOptions"
                >
                  <span
                    class="bp3-popover-wrapper bp3-dark"
                  >
                    <span
                      class="bp3-popover-target"
                    >
                      <button
                        class="bp3-button bp3-minimal Button--button StyledProps--font StyledProps--main Button--with-current-color Button--iconOnly Button--without-shadow Button--withRightIcon"
                        id="configureOptions_tag"
                        tabindex="0"
                        type="button"
                      >
                        <span
                          class="bp3-icon bp3-icon-cog StyledProps--main"
                          icon="cog"
                        >
                          <svg
                            data-icon="cog"
                            height="16"
                            viewBox="0 0 16 16"
                            width="16"
                          >
                            <desc>
                              cog
                            </desc>
                            <path
                              d="M15.19 6.39h-1.85c-.11-.37-.27-.71-.45-1.04l1.36-1.36c.31-.31.31-.82 0-1.13l-1.13-1.13a.803.803 0 00-1.13 0l-1.36 1.36c-.33-.17-.67-.33-1.04-.44V.79c0-.44-.36-.8-.8-.8h-1.6c-.44 0-.8.36-.8.8v1.86c-.39.12-.75.28-1.1.47l-1.3-1.3c-.3-.3-.79-.3-1.09 0L1.82 2.91c-.3.3-.3.79 0 1.09l1.3 1.3c-.2.34-.36.7-.48 1.09H.79c-.44 0-.8.36-.8.8v1.6c0 .44.36.8.8.8h1.85c.11.37.27.71.45 1.04l-1.36 1.36c-.31.31-.31.82 0 1.13l1.13 1.13c.31.31.82.31 1.13 0l1.36-1.36c.33.18.67.33 1.04.44v1.86c0 .44.36.8.8.8h1.6c.44 0 .8-.36.8-.8v-1.86c.39-.12.75-.28 1.1-.47l1.3 1.3c.3.3.79.3 1.09 0l1.09-1.09c.3-.3.3-.79 0-1.09l-1.3-1.3c.19-.35.36-.71.48-1.1h1.85c.44 0 .8-.36.8-.8v-1.6a.816.816 0 00-.81-.79zm-7.2 4.6c-1.66 0-3-1.34-3-3s1.34-3 3-3 3 1.34 3 3-1.34 3-3 3z"
                              fill-rule="evenodd"
                            />
                          </svg>
                        </span>
                      </button>
                    </span>
                  </span>
                </div>
              </div>
            </div>
            <div
              class="Layout--horizontal Layout--layout-spacing-medium StyledProps--main"
            >
              <button
                class="bp3-button Button--button StyledProps--font StyledProps--main Button--with-current-color Button--withLeftIcon Button--variation Button--variation-secondary"
                type="button"
              >
                <span
                  class="bp3-icon bp3-icon-chevron-left StyledProps--main StyledProps--padding-right-xsmall"
                  icon="chevron-left"
                >
                  <svg
                    data-icon="chevron-left"
                    height="16"
                    viewBox="0 0 16 16"
                    width="16"
                  >
                    <desc>
                      chevron-left
                    </desc>
                    <path
                      d="M7.41 8l3.29-3.29c.19-.18.3-.43.3-.71a1.003 1.003 0 00-1.71-.71l-4 4C5.11 7.47 5 7.72 5 8c0 .28.11.53.29.71l4 4a1.003 1.003 0 001.42-1.42L7.41 8z"
                      fill-rule="evenodd"
                    />
                  </svg>
                </span>
                <span
                  class="bp3-button-text"
                >
                  back
                </span>
              </button>
              <button
                class="bp3-button Button--button StyledProps--font StyledProps--main Button--with-current-color Button--withRightIcon Button--variation Button--variation-primary"
                type="submit"
              >
                <span
                  class="bp3-button-text"
                >
                  submit
                </span>
                <span
                  class="bp3-icon bp3-icon-chevron-right StyledProps--main"
                  icon="chevron-right"
                >
                  <svg
                    data-icon="chevron-right"
                    height="16"
                    viewBox="0 0 16 16"
                    width="16"
                  >
                    <desc>
                      chevron-right
                    </desc>
                    <path
                      d="M10.71 7.29l-4-4a1.003 1.003 0 00-1.42 1.42L8.59 8 5.3 11.29c-.19.18-.3.43-.3.71a1.003 1.003 0 001.71.71l4-4c.18-.18.29-.43.29-.71 0-.28-.11-.53-.29-.71z"
                      fill-rule="evenodd"
                    />
                  </svg>
                </span>
              </button>
            </div>
          </form>
        </div>
      </div>
    </div>
    <span
      class="bp3-icon StyledProps--main StepWizard--harnessWatermark StyledProps--color StyledProps--color-grey50"
      data-icon="harness-with-color"
    >
      <svg
        height="346"
        viewBox="0 0 25 25"
        width="346"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="m22.9736 8.18585-6.2654-6.30553c-.1103-.11108-1.0951-1.07656-2.5893-1.572117-2.1394-.717703-4.26188-.153793-5.98529 1.572117l-6.26542 6.30553c-.11036.11107-1.069701 1.10219-1.562105 2.60595-.713136 2.1531-.152815 4.2891 1.562105 6.0236l6.26542 6.3055c.11037.1111 1.09517 1.0766 2.58939 1.5807.6112.205 1.214.3076 1.8083.3076 1.5027 0 2.9459-.6408 4.1769-1.8797l6.2654-6.3056c.1104-.111 1.0698-1.1022 1.5622-2.6059.7131-2.1617.1528-4.2977-1.5622-6.03215zm-10.0688-4.4771c.7047.2136 1.231.70061 1.2735.73479l1.8508 1.86261-3.6082 3.63124-3.60811-3.63124 1.85921-1.87115c.5009-.49556 1.1971-1.03384 2.2328-.72625zm-9.21981 8.30485c.21225-.7092.69616-1.2389.73012-1.2816l1.85076-1.86262 3.60813 3.63122-3.60813 3.6313-1.85925-1.8712c-.4924-.5041-1.02726-1.2133-.72163-2.2471zm8.25201 9.2789c-.7046-.2136-1.231-.7006-1.2735-.7348l-1.85071-1.8626 3.60811-3.6313 3.6082 3.6313-1.8593 1.8711c-.5009.4956-1.2055 1.0339-2.2328.7263zm9.2198-8.3049c-.2122.7092-.6961 1.2389-.7301 1.2816l-1.8507 1.8627-3.6082-3.6313 3.6082-3.63122 1.8592 1.87112c.4924.5041 1.0273 1.2047.7216 2.2471z"
          fill="currentColor"
          fill-rule="evenodd"
        />
      </svg>
    </span>
  </div>
</div>
`;

exports[`Artifact WizardStep tests new connector view works correctly in select dialog 1`] = `
<div>
  <div
    class="StepWizard--main existingDocker StepWizard--navBar"
  >
    <div
      class="StepWizard--navBarList"
    >
      <div
        class="StepWizard--navStep StepWizard--completedStep"
      >
        <span
          class="StepWizard--completedIcon"
        >
          <span
            class="bp3-icon bp3-icon-small-tick StyledProps--main StyledProps--color StyledProps--color-primary7"
            icon="small-tick"
          >
            <svg
              data-icon="small-tick"
              height="20"
              viewBox="0 0 20 20"
              width="20"
            >
              <desc>
                small-tick
              </desc>
              <path
                d="M15 5c-.28 0-.53.11-.71.29L8 11.59l-2.29-2.3a1.003 1.003 0 00-1.42 1.42l3 3c.18.18.43.29.71.29s.53-.11.71-.29l7-7A1.003 1.003 0 0015 5z"
                fill-rule="evenodd"
              />
            </svg>
          </span>
        </span>
        <p
          class="StyledProps--font Text--lineclamp StyledProps--main StepWizard--stepName"
          style="--text-line-clamp: 2; width: 200px;"
        >
          connectors.artifactRepoType
        </p>
        <p
          class="StyledProps--font Text--lineclamp StyledProps--main StepWizard--stepName"
          style="--text-line-clamp: 2; width: 200px;"
        >
          <div
            class="subtitle"
            style="display: flex;"
          >
            <span
              class="bp3-icon StyledProps--main"
              data-icon="info"
            >
              <svg
                height="26"
                viewBox="0 0 12 12"
                width="26"
                xmlns="http://www.w3.org/2000/svg"
              >
                <defs />
                <path
                  clip-rule="evenodd"
                  d="M0 6c0 3.31371 2.68629 6 6 6s6-2.68629 6-6-2.68629-6-6-6-6 2.68629-6 6zm.75 0c0 2.8995 2.35051 5.25 5.25 5.25 2.8995 0 5.25-2.3505 5.25-5.25C11.25 3.10051 8.8995.75 6 .75 3.10051.75.75 3.10051.75 6zm4.2063 3.104v.646h2.6814v-.646l-.8357-.14355V4.20264H4.9563v.65112l.83569.14355v3.96314L4.9563 9.104zM6.802 1.75195v1.03052H5.79199V1.75195H6.802z"
                  fill-rule="evenodd"
                />
              </svg>
            </span>
            <span
              style="align-self: center;"
            >
              dockerRegistry
            </span>
          </div>
        </p>
      </div>
      <div
        class="StepWizard--navStep StepWizard--activeStep"
      >
        <span
          class="StepWizard--number"
        >
          2
        </span>
        <p
          class="StyledProps--font Text--lineclamp StyledProps--main StepWizard--stepName"
          style="--text-line-clamp: 2; width: 200px;"
        >
          connectors.artifactRepository
        </p>
      </div>
      <div
        class="StepWizard--navStep"
      >
        <span
          class="StepWizard--number"
        >
          3
        </span>
        <p
          class="StyledProps--font Text--lineclamp StyledProps--main StepWizard--stepName"
          style="--text-line-clamp: 2; width: 200px;"
        >
          Artifact Location
        </p>
      </div>
    </div>
    <div
      class="StepWizard--stepDetails"
    >
       
      <div
        class="Layout--vertical Layout--layout-spacing-xxlarge StyledProps--main firstep"
      >
        <p
          class="StyledProps--font StyledProps--main StyledProps--font-variation-h3 StyledProps--margin-bottom-medium"
        >
          second step
        </p>
        <div
          class="OverlaySpinner--overlaySpinner"
        >
          <form
            class="FormikForm--main"
          >
            <div>
              <div
                class="connectorForm"
              >
                <div
                  class="Layout--horizontal Layout--layout-spacing-medium StyledProps--main connectorContainer StyledProps--flex StyledProps--flex-alignItems-flex-start StyledProps--flex-justifyContent-flex-start"
                >
                  <div
                    class="connectorLabel"
                  >
                    <div
                      class="StyledProps--font StyledProps--main"
                      style="margin-bottom: 5px;"
                    >
                      <span
                        class="Tooltip--acenter bp3-label"
                        data-tooltip-id="artifactConnForm_connectorId"
                      >
                        Docker Registry connector
                      </span>
                    </div>
                    <div
                      class="bp3-form-group"
                      data-id="undefined-0"
                      style="margin-bottom: 0px;"
                    >
                      <div
                        class="bp3-form-content"
                      >
                        <div
                          class="Layout--horizontal StyledProps--main MultiTypeInput--main"
                          style="width: 400px;"
                        >
                          <button
                            class="bp3-button bp3-minimal Button--button StyledProps--font StyledProps--main container Button--iconOnly Button--without-shadow Button--withRightIcon"
                            data-testid="cr-field-connectorId"
                            style="width: 400px;"
                            type="button"
                          >
                            <span
                              class="bp3-button-text"
                            >
                              <span
                                class="placeholder"
                              >
                                select Docker Registry connector
                              </span>
                            </span>
                            <span
                              class="bp3-icon bp3-icon-chevron-down StyledProps--main"
                              icon="chevron-down"
                            >
                              <svg
                                data-icon="chevron-down"
                                height="14"
                                viewBox="0 0 16 16"
                                width="14"
                              >
                                <desc>
                                  chevron-down
                                </desc>
                                <path
                                  d="M12 5c-.28 0-.53.11-.71.29L8 8.59l-3.29-3.3a1.003 1.003 0 00-1.42 1.42l4 4c.18.18.43.29.71.29s.53-.11.71-.29l4-4A1.003 1.003 0 0012 5z"
                                  fill-rule="evenodd"
                                />
                              </svg>
                            </span>
                          </button>
                          <span
                            class="bp3-popover-wrapper MultiTypeInput--wrapper"
                          >
                            <span
                              class="bp3-popover-target"
                            >
                              <button
                                class="MultiTypeInput--btn MultiTypeInput--FIXED"
                              >
                                <span
                                  class="bp3-icon StyledProps--main"
                                  data-icon="fixed-input"
                                >
                                  <svg
                                    height="12"
                                    viewBox="0 0 9 9"
                                    width="12"
                                    xmlns="http://www.w3.org/2000/svg"
                                  >
                                    <path
                                      d="m5.61 7.55c.62-.7.3-1.42.18-2.35a.32.32 0 0 1 .1-.29l1.43-1.42a.76.76 0 0 1 .28-.15c.39-.1 1 0 1.28-.29a.34.34 0 0 0 0-.51l-2.42-2.42a.33.33 0 0 0 -.52 0c-.28.29-.2.9-.28 1.3a.53.53 0 0 1 -.13.23l-1.44 1.47a.29.29 0 0 1 -.28.09c-.89-.11-1.6-.49-2.27.11-.29.26-.29.43 0 .7l1.31 1.34.15.16-.15.15-2.7 2.69a.36.36 0 0 0 0 .54.36.36 0 0 0 .54-.05l2.63-2.68.17-.17.17.16c.45.46.9.91 1.36 1.36.21.21.42.22.59.03z"
                                      fill="currentColor"
                                    />
                                  </svg>
                                </span>
                              </button>
                            </span>
                          </span>
                        </div>
                      </div>
                    </div>
                  </div>
                  <button
                    class="bp3-button Button--button StyledProps--font StyledProps--main addNewArtifact Button--with-current-color Button--withLeftIcon Button--variation Button--variation-link Button--size Button--small"
                    id="new-artifact-connector"
                    type="button"
                  >
                    <span
                      class="bp3-icon bp3-icon-plus StyledProps--main StyledProps--padding-right-xsmall"
                      icon="plus"
                    >
                      <svg
                        data-icon="plus"
                        height="12"
                        viewBox="0 0 16 16"
                        width="12"
                      >
                        <desc>
                          plus
                        </desc>
                        <path
                          d="M13 7H9V3c0-.55-.45-1-1-1s-1 .45-1 1v4H3c-.55 0-1 .45-1 1s.45 1 1 1h4v4c0 .55.45 1 1 1s1-.45 1-1V9h4c.55 0 1-.45 1-1s-.45-1-1-1z"
                          fill-rule="evenodd"
                        />
                      </svg>
                    </span>
                    <span
                      class="bp3-button-text"
                    >
                      newLabel Docker Registry connector
                    </span>
                  </button>
                </div>
              </div>
              <div
                class="Layout--horizontal Layout--layout-spacing-medium StyledProps--main"
              >
                <button
                  class="bp3-button Button--button StyledProps--font StyledProps--main Button--with-current-color Button--withLeftIcon Button--variation Button--variation-secondary"
                  type="button"
                >
                  <span
                    class="bp3-icon bp3-icon-chevron-left StyledProps--main StyledProps--padding-right-xsmall"
                    icon="chevron-left"
                  >
                    <svg
                      data-icon="chevron-left"
                      height="16"
                      viewBox="0 0 16 16"
                      width="16"
                    >
                      <desc>
                        chevron-left
                      </desc>
                      <path
                        d="M7.41 8l3.29-3.29c.19-.18.3-.43.3-.71a1.003 1.003 0 00-1.71-.71l-4 4C5.11 7.47 5 7.72 5 8c0 .28.11.53.29.71l4 4a1.003 1.003 0 001.42-1.42L7.41 8z"
                        fill-rule="evenodd"
                      />
                    </svg>
                  </span>
                  <span
                    class="bp3-button-text"
                  >
                    back
                  </span>
                </button>
                <button
                  class="bp3-button bp3-disabled Button--button StyledProps--font StyledProps--main Button--with-current-color Button--withRightIcon Button--variation Button--variation-primary"
                  disabled=""
                  tabindex="-1"
                  type="submit"
                >
                  <span
                    class="bp3-button-text"
                  >
                    continue
                  </span>
                  <span
                    class="bp3-icon bp3-icon-chevron-right StyledProps--main"
                    icon="chevron-right"
                  >
                    <svg
                      data-icon="chevron-right"
                      height="16"
                      viewBox="0 0 16 16"
                      width="16"
                    >
                      <desc>
                        chevron-right
                      </desc>
                      <path
                        d="M10.71 7.29l-4-4a1.003 1.003 0 00-1.42 1.42L8.59 8 5.3 11.29c-.19.18-.3.43-.3.71a1.003 1.003 0 001.71.71l4-4c.18-.18.29-.43.29-.71 0-.28-.11-.53-.29-.71z"
                        fill-rule="evenodd"
                      />
                    </svg>
                  </span>
                </button>
              </div>
            </div>
          </form>
        </div>
      </div>
    </div>
    <span
      class="bp3-icon StyledProps--main StepWizard--harnessWatermark StyledProps--color StyledProps--color-grey50"
      data-icon="harness-with-color"
    >
      <svg
        height="346"
        viewBox="0 0 25 25"
        width="346"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="m22.9736 8.18585-6.2654-6.30553c-.1103-.11108-1.0951-1.07656-2.5893-1.572117-2.1394-.717703-4.26188-.153793-5.98529 1.572117l-6.26542 6.30553c-.11036.11107-1.069701 1.10219-1.562105 2.60595-.713136 2.1531-.152815 4.2891 1.562105 6.0236l6.26542 6.3055c.11037.1111 1.09517 1.0766 2.58939 1.5807.6112.205 1.214.3076 1.8083.3076 1.5027 0 2.9459-.6408 4.1769-1.8797l6.2654-6.3056c.1104-.111 1.0698-1.1022 1.5622-2.6059.7131-2.1617.1528-4.2977-1.5622-6.03215zm-10.0688-4.4771c.7047.2136 1.231.70061 1.2735.73479l1.8508 1.86261-3.6082 3.63124-3.60811-3.63124 1.85921-1.87115c.5009-.49556 1.1971-1.03384 2.2328-.72625zm-9.21981 8.30485c.21225-.7092.69616-1.2389.73012-1.2816l1.85076-1.86262 3.60813 3.63122-3.60813 3.6313-1.85925-1.8712c-.4924-.5041-1.02726-1.2133-.72163-2.2471zm8.25201 9.2789c-.7046-.2136-1.231-.7006-1.2735-.7348l-1.85071-1.8626 3.60811-3.6313 3.6082 3.6313-1.8593 1.8711c-.5009.4956-1.2055 1.0339-2.2328.7263zm9.2198-8.3049c-.2122.7092-.6961 1.2389-.7301 1.2816l-1.8507 1.8627-3.6082-3.6313 3.6082-3.63122 1.8592 1.87112c.4924.5041 1.0273 1.2047.7216 2.2471z"
          fill="currentColor"
          fill-rule="evenodd"
        />
      </svg>
    </span>
  </div>
</div>
`;

exports[`Artifact WizardStep tests renders correctly with connector Data 1`] = `
<div>
  <div
    class="StepWizard--main existingDocker StepWizard--navBar"
  >
    <div
      class="StepWizard--navBarList"
    >
      <div
        class="StepWizard--navStep StepWizard--activeStep"
      >
        <span
          class="StepWizard--number"
        >
          1
        </span>
        <p
          class="StyledProps--font Text--lineclamp StyledProps--main StepWizard--stepName"
          style="--text-line-clamp: 2; width: 200px;"
        >
          connectors.artifactRepoType
        </p>
        <p
          class="StyledProps--font Text--lineclamp StyledProps--main StepWizard--stepName"
          style="--text-line-clamp: 2; width: 200px;"
        >
          <div
            class="subtitle"
            style="display: flex;"
          >
            <span
              class="bp3-icon StyledProps--main"
              data-icon="info"
            >
              <svg
                height="26"
                viewBox="0 0 12 12"
                width="26"
                xmlns="http://www.w3.org/2000/svg"
              >
                <defs />
                <path
                  clip-rule="evenodd"
                  d="M0 6c0 3.31371 2.68629 6 6 6s6-2.68629 6-6-2.68629-6-6-6-6 2.68629-6 6zm.75 0c0 2.8995 2.35051 5.25 5.25 5.25 2.8995 0 5.25-2.3505 5.25-5.25C11.25 3.10051 8.8995.75 6 .75 3.10051.75.75 3.10051.75 6zm4.2063 3.104v.646h2.6814v-.646l-.8357-.14355V4.20264H4.9563v.65112l.83569.14355v3.96314L4.9563 9.104zM6.802 1.75195v1.03052H5.79199V1.75195H6.802z"
                  fill-rule="evenodd"
                />
              </svg>
            </span>
            <span
              style="align-self: center;"
            >
              dockerRegistry
            </span>
          </div>
        </p>
      </div>
      <div
        class="StepWizard--navStep"
      >
        <span
          class="StepWizard--number"
        >
          2
        </span>
        <p
          class="StyledProps--font Text--lineclamp StyledProps--main StepWizard--stepName"
          style="--text-line-clamp: 2; width: 200px;"
        >
          connectors.artifactRepository
        </p>
      </div>
      <div
        class="StepWizard--navStep"
      >
        <span
          class="StepWizard--number"
        >
          3
        </span>
        <p
          class="StyledProps--font Text--lineclamp StyledProps--main StepWizard--stepName"
          style="--text-line-clamp: 2; width: 200px;"
        >
          Artifact Location
        </p>
      </div>
    </div>
    <div
      class="StepWizard--stepDetails"
    >
       
      <div
        class="StyledProps--font StyledProps--main optionsViewContainer"
      >
        <p
          class="StyledProps--font StyledProps--main StyledProps--font-variation-h3 StyledProps--margin-bottom-medium"
        >
          first step
        </p>
        <div
          class="OverlaySpinner--overlaySpinner"
        >
          <form>
            <div
              class="headerContainer"
            >
              <div
                class="Layout--horizontal Layout--layout-spacing-large StyledProps--main"
              >
                <div
                  class="bp3-form-group ThumbnailSelect--mainContainer thumbnailSelect"
                >
                  <div
                    class="bp3-form-content"
                  >
                    <div
                      class="Layout--horizontal Layout--layout-spacing-medium StyledProps--main"
                    >
                      <button
                        class="bp3-button bp3-minimal Button--button StyledProps--font StyledProps--main ThumbnailSelect--changeButton StyledProps--intent-primary Button--without-shadow Button--withLeftIcon"
                        data-testid="thumbnail-select-change"
                        type="button"
                      >
                        <span
                          class="bp3-icon StyledProps--main StyledProps--padding-right-xsmall"
                          data-icon="Edit"
                        >
                          <svg
                            height="12"
                            viewBox="0 0 16 16"
                            width="12"
                            xmlns="http://www.w3.org/2000/svg"
                          >
                            <path
                              clip-rule="evenodd"
                              d="M11.207.485a.5.5 0 0 1 .354-.146 3.5 3.5 0 0 1 3.5 3.5.5.5 0 0 1-.146.353l-11 11a.5.5 0 0 1-.354.147h-3a.5.5 0 0 1-.5-.5v-3a.5.5 0 0 1 .146-.354l11-11Zm.553.862L1.061 12.046v2.293h2.293l10.7-10.7a2.5 2.5 0 0 0-2.294-2.292Z"
                              fill="currentColor"
                              fill-rule="evenodd"
                            />
                            <path
                              clip-rule="evenodd"
                              d="M11.89 2.646a.5.5 0 0 1 0 .708L8.353 6.889a.5.5 0 0 1-.708-.707l3.536-3.536a.5.5 0 0 1 .707 0Z"
                              fill="currentColor"
                              fill-rule="evenodd"
                              opacity="0.3"
                            />
                          </svg>
                        </span>
                        <span
                          class="bp3-button-text"
                        >
                          Change
                        </span>
                      </button>
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="Layout--horizontal StyledProps--main"
            >
              <button
                class="bp3-button Button--button StyledProps--font StyledProps--main Button--with-current-color Button--withRightIcon Button--variation Button--variation-primary"
                type="submit"
              >
                <span
                  class="bp3-button-text"
                >
                  continue
                </span>
                <span
                  class="bp3-icon bp3-icon-chevron-right StyledProps--main"
                  icon="chevron-right"
                >
                  <svg
                    data-icon="chevron-right"
                    height="16"
                    viewBox="0 0 16 16"
                    width="16"
                  >
                    <desc>
                      chevron-right
                    </desc>
                    <path
                      d="M10.71 7.29l-4-4a1.003 1.003 0 00-1.42 1.42L8.59 8 5.3 11.29c-.19.18-.3.43-.3.71a1.003 1.003 0 001.71.71l4-4c.18-.18.29-.43.29-.71 0-.28-.11-.53-.29-.71z"
                      fill-rule="evenodd"
                    />
                  </svg>
                </span>
              </button>
            </div>
          </form>
        </div>
      </div>
    </div>
    <span
      class="bp3-icon StyledProps--main StepWizard--harnessWatermark StyledProps--color StyledProps--color-grey50"
      data-icon="harness-with-color"
    >
      <svg
        height="346"
        viewBox="0 0 25 25"
        width="346"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="m22.9736 8.18585-6.2654-6.30553c-.1103-.11108-1.0951-1.07656-2.5893-1.572117-2.1394-.717703-4.26188-.153793-5.98529 1.572117l-6.26542 6.30553c-.11036.11107-1.069701 1.10219-1.562105 2.60595-.713136 2.1531-.152815 4.2891 1.562105 6.0236l6.26542 6.3055c.11037.1111 1.09517 1.0766 2.58939 1.5807.6112.205 1.214.3076 1.8083.3076 1.5027 0 2.9459-.6408 4.1769-1.8797l6.2654-6.3056c.1104-.111 1.0698-1.1022 1.5622-2.6059.7131-2.1617.1528-4.2977-1.5622-6.03215zm-10.0688-4.4771c.7047.2136 1.231.70061 1.2735.73479l1.8508 1.86261-3.6082 3.63124-3.60811-3.63124 1.85921-1.87115c.5009-.49556 1.1971-1.03384 2.2328-.72625zm-9.21981 8.30485c.21225-.7092.69616-1.2389.73012-1.2816l1.85076-1.86262 3.60813 3.63122-3.60813 3.6313-1.85925-1.8712c-.4924-.5041-1.02726-1.2133-.72163-2.2471zm8.25201 9.2789c-.7046-.2136-1.231-.7006-1.2735-.7348l-1.85071-1.8626 3.60811-3.6313 3.6082 3.6313-1.8593 1.8711c-.5009.4956-1.2055 1.0339-2.2328.7263zm9.2198-8.3049c-.2122.7092-.6961 1.2389-.7301 1.2816l-1.8507 1.8627-3.6082-3.6313 3.6082-3.63122 1.8592 1.87112c.4924.5041 1.0273 1.2047.7216 2.2471z"
          fill="currentColor"
          fill-rule="evenodd"
        />
      </svg>
    </span>
  </div>
</div>
`;

exports[`Artifact WizardStep tests renders correctly with differnet artifact types 1`] = `
<div>
  <div
    class="StepWizard--main existingDocker StepWizard--navBar"
  >
    <div
      class="StepWizard--navBarList"
    >
      <div
        class="StepWizard--navStep StepWizard--activeStep"
      >
        <span
          class="StepWizard--number"
        >
          1
        </span>
        <p
          class="StyledProps--font Text--lineclamp StyledProps--main StepWizard--stepName"
          style="--text-line-clamp: 2; width: 200px;"
        >
          connectors.artifactRepoType
        </p>
        <p
          class="StyledProps--font Text--lineclamp StyledProps--main StepWizard--stepName"
          style="--text-line-clamp: 2; width: 200px;"
        >
          <div
            class="subtitle"
            style="display: flex;"
          >
            <span
              class="bp3-icon StyledProps--main"
              data-icon="info"
            >
              <svg
                height="26"
                viewBox="0 0 12 12"
                width="26"
                xmlns="http://www.w3.org/2000/svg"
              >
                <defs />
                <path
                  clip-rule="evenodd"
                  d="M0 6c0 3.31371 2.68629 6 6 6s6-2.68629 6-6-2.68629-6-6-6-6 2.68629-6 6zm.75 0c0 2.8995 2.35051 5.25 5.25 5.25 2.8995 0 5.25-2.3505 5.25-5.25C11.25 3.10051 8.8995.75 6 .75 3.10051.75.75 3.10051.75 6zm4.2063 3.104v.646h2.6814v-.646l-.8357-.14355V4.20264H4.9563v.65112l.83569.14355v3.96314L4.9563 9.104zM6.802 1.75195v1.03052H5.79199V1.75195H6.802z"
                  fill-rule="evenodd"
                />
              </svg>
            </span>
            <span
              style="align-self: center;"
            >
              connectors.GCR.name
            </span>
          </div>
        </p>
      </div>
      <div
        class="StepWizard--navStep"
      >
        <span
          class="StepWizard--number"
        >
          2
        </span>
        <p
          class="StyledProps--font Text--lineclamp StyledProps--main StepWizard--stepName"
          style="--text-line-clamp: 2; width: 200px;"
        >
          connectors.artifactRepository
        </p>
      </div>
      <div
        class="StepWizard--navStep"
      >
        <span
          class="StepWizard--number"
        >
          3
        </span>
        <p
          class="StyledProps--font Text--lineclamp StyledProps--main StepWizard--stepName"
          style="--text-line-clamp: 2; width: 200px;"
        >
          Artifact Location
        </p>
      </div>
    </div>
    <div
      class="StepWizard--stepDetails"
    >
       
      <div
        class="StyledProps--font StyledProps--main optionsViewContainer"
      >
        <p
          class="StyledProps--font StyledProps--main StyledProps--font-variation-h3 StyledProps--margin-bottom-medium"
        >
          first step
        </p>
        <div
          class="OverlaySpinner--overlaySpinner"
        >
          <form>
            <div
              class="headerContainer"
            >
              <div
                class="Layout--horizontal Layout--layout-spacing-large StyledProps--main"
              >
                <div
                  class="bp3-form-group ThumbnailSelect--mainContainer thumbnailSelect"
                >
                  <div
                    class="bp3-form-content"
                  >
                    <div
                      class="Layout--horizontal Layout--layout-spacing-medium StyledProps--main"
                    >
                      <label
                        class="Thumbnail--squareCardContainer"
                      >
                        <div
                          class="bp3-card bp3-elevation-0 Card--card Thumbnail--squareCard Card--selected"
                        >
                          <span
                            class="Card--corner"
                          >
                            <span
                              class="Card--badge"
                            />
                            <span
                              class="bp3-icon StyledProps--main StyledProps--color StyledProps--color-white"
                              data-icon="main-tick"
                            >
                              <svg
                                height="10"
                                viewBox="0 0 11 8"
                                width="10"
                                xmlns="http://www.w3.org/2000/svg"
                              >
                                <path
                                  d="M9.219.894c.356-.38.982-.413 1.398-.072.391.32.457.857.167 1.236l-.06.07-5.138 5.486c-.362.386-.993.41-1.403.068l-.07-.064-3.2-3.214A.88.88 0 01.95 3.098a1.045 1.045 0 011.328-.003l.074.067 2.443 2.454L9.22.894z"
                                  fill="currentColor"
                                />
                              </svg>
                            </span>
                          </span>
                          <span
                            class="bp3-icon StyledProps--main"
                            data-icon="service-gcp"
                          >
                            <svg
                              enable-background="new 0 0 14 12"
                              height="26"
                              viewBox="0 0 14 12"
                              width="26"
                              xmlns="http://www.w3.org/2000/svg"
                              xmlns:xlink="http://www.w3.org/1999/xlink"
                            >
                              <mask
                                height="8.5"
                                id="a"
                                maskUnits="userSpaceOnUse"
                                width="9.1"
                                x="0"
                                y="0"
                              >
                                <path
                                  d="m0 0h9.1v8.5h-9.1z"
                                  fill="#fff"
                                />
                              </mask>
                              <path
                                d="m4.5 11-2.5-4.5 2.5-4.5h5l2.5 4.5-2.5 4.5z"
                                fill="#cac9c2"
                              />
                              <path
                                d="m7 7.8c-1.1 0-1.9-.8-1.9-1.8s.8-1.9 1.9-1.9c1 0 1.9.9 1.9 1.9s-.9 1.8-1.9 1.8"
                                fill="#fff"
                              />
                              <path
                                d="m10.8.5c-.1-.3-.5-.5-.8-.5h-6c-.3 0-.7.2-.9.5l-1.7 2.9c0 .2 0 .4.1.5l1.2 2 2.1-3.6h6.8c.2 0 .3.1.5.2z"
                                fill="#5072aa"
                              />
                              <path
                                d="m1.4 3.3v.1c0 .2 0 .4.1.5l1.2 2 .6-1.1z"
                                fill="#4d6796"
                              />
                              <path
                                d="m4.1 1.5c-.2 0-.4-.2-.4-.4s.2-.4.4-.4.4.2.4.4c0 .3-.2.4-.4.4"
                                fill="#fff"
                              />
                              <path
                                d="m10.2 1.2c0 .2-.2.3-.3.3s-.4-.1-.4-.3.2-.3.3-.3.4.1.4.3"
                                fill="#fff"
                              />
                              <path
                                d="m13.9 5.5-1.8-3c-.2-.1-.3-.2-.5-.2h-2.5l2.1 3.7-3.3 5.7c-.1.1-.2.2-.3.3h2.4c.3 0 .7-.2.8-.5l3-5c.2-.3.2-.7.1-1"
                                fill="#cc4232"
                              />
                              <path
                                d="m12.2 2.7-.1-.1c-.2-.1-.3-.2-.5-.2h-2.5l.6 1.1z"
                                fill="#b23f33"
                              />
                              <path
                                d="m9.8 11.1c-.2 0-.4-.2-.4-.4s.2-.4.4-.4.4.2.4.4-.2.4-.4.4"
                                fill="#fff"
                              />
                              <path
                                d="m12.7 6.3c-.2 0-.4-.2-.4-.4s.2-.4.4-.4.4.2.4.4c0 .3-.2.4-.4.4"
                                fill="#fff"
                              />
                              <path
                                d="m4.9 6.1-3.4-5.6c-.1-.1-.1-.3-.1-.5l-1.3 2.1c-.1.3-.1.7 0 .9l3 5c.2.3.6.5.9.5h3.6c.1-.1.3-.2.3-.3l1.2-2.1z"
                                fill="#ecb02a"
                                mask="url(#a)"
                                transform="translate(0 3.421053)"
                              />
                              <path
                                d="m7.4 11.9h.2c.1-.1.3-.2.3-.3l1.2-2.1h-1.3z"
                                fill="#c79732"
                              />
                              <g
                                fill="#fff"
                              >
                                <path
                                  d="m4.1 11.1c-.2 0-.4-.2-.4-.4s.2-.4.4-.4.4.2.4.4-.2.4-.4.4"
                                />
                                <path
                                  d="m1.2 6.3c-.2 0-.3-.1-.3-.3s.2-.4.4-.4.4.2.4.4c-.1.2-.3.3-.5.3"
                                />
                              </g>
                            </svg>
                          </span>
                        </div>
                        <p
                          class="StyledProps--font StyledProps--main Thumbnail--label StyledProps--font-weight-semi-bold StyledProps--color StyledProps--color-grey600 StyledProps--margin-top-small"
                        >
                          connectors.GCR.name
                        </p>
                        <input
                          checked=""
                          name="artifactType"
                          type="checkbox"
                          value="Gcr"
                        />
                      </label>
                      <button
                        class="bp3-button bp3-minimal Button--button StyledProps--font StyledProps--main ThumbnailSelect--changeButton StyledProps--intent-primary Button--without-shadow Button--withLeftIcon"
                        data-testid="thumbnail-select-change"
                        type="button"
                      >
                        <span
                          class="bp3-icon StyledProps--main StyledProps--padding-right-xsmall"
                          data-icon="Edit"
                        >
                          <svg
                            height="12"
                            viewBox="0 0 16 16"
                            width="12"
                            xmlns="http://www.w3.org/2000/svg"
                          >
                            <path
                              clip-rule="evenodd"
                              d="M11.207.485a.5.5 0 0 1 .354-.146 3.5 3.5 0 0 1 3.5 3.5.5.5 0 0 1-.146.353l-11 11a.5.5 0 0 1-.354.147h-3a.5.5 0 0 1-.5-.5v-3a.5.5 0 0 1 .146-.354l11-11Zm.553.862L1.061 12.046v2.293h2.293l10.7-10.7a2.5 2.5 0 0 0-2.294-2.292Z"
                              fill="currentColor"
                              fill-rule="evenodd"
                            />
                            <path
                              clip-rule="evenodd"
                              d="M11.89 2.646a.5.5 0 0 1 0 .708L8.353 6.889a.5.5 0 0 1-.708-.707l3.536-3.536a.5.5 0 0 1 .707 0Z"
                              fill="currentColor"
                              fill-rule="evenodd"
                              opacity="0.3"
                            />
                          </svg>
                        </span>
                        <span
                          class="bp3-button-text"
                        >
                          Change
                        </span>
                      </button>
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="Layout--horizontal StyledProps--main"
            >
              <button
                class="bp3-button Button--button StyledProps--font StyledProps--main Button--with-current-color Button--withRightIcon Button--variation Button--variation-primary"
                type="submit"
              >
                <span
                  class="bp3-button-text"
                >
                  continue
                </span>
                <span
                  class="bp3-icon bp3-icon-chevron-right StyledProps--main"
                  icon="chevron-right"
                >
                  <svg
                    data-icon="chevron-right"
                    height="16"
                    viewBox="0 0 16 16"
                    width="16"
                  >
                    <desc>
                      chevron-right
                    </desc>
                    <path
                      d="M10.71 7.29l-4-4a1.003 1.003 0 00-1.42 1.42L8.59 8 5.3 11.29c-.19.18-.3.43-.3.71a1.003 1.003 0 001.71.71l4-4c.18-.18.29-.43.29-.71 0-.28-.11-.53-.29-.71z"
                      fill-rule="evenodd"
                    />
                  </svg>
                </span>
              </button>
            </div>
          </form>
        </div>
      </div>
    </div>
    <span
      class="bp3-icon StyledProps--main StepWizard--harnessWatermark StyledProps--color StyledProps--color-grey50"
      data-icon="harness-with-color"
    >
      <svg
        height="346"
        viewBox="0 0 25 25"
        width="346"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="m22.9736 8.18585-6.2654-6.30553c-.1103-.11108-1.0951-1.07656-2.5893-1.572117-2.1394-.717703-4.26188-.153793-5.98529 1.572117l-6.26542 6.30553c-.11036.11107-1.069701 1.10219-1.562105 2.60595-.713136 2.1531-.152815 4.2891 1.562105 6.0236l6.26542 6.3055c.11037.1111 1.09517 1.0766 2.58939 1.5807.6112.205 1.214.3076 1.8083.3076 1.5027 0 2.9459-.6408 4.1769-1.8797l6.2654-6.3056c.1104-.111 1.0698-1.1022 1.5622-2.6059.7131-2.1617.1528-4.2977-1.5622-6.03215zm-10.0688-4.4771c.7047.2136 1.231.70061 1.2735.73479l1.8508 1.86261-3.6082 3.63124-3.60811-3.63124 1.85921-1.87115c.5009-.49556 1.1971-1.03384 2.2328-.72625zm-9.21981 8.30485c.21225-.7092.69616-1.2389.73012-1.2816l1.85076-1.86262 3.60813 3.63122-3.60813 3.6313-1.85925-1.8712c-.4924-.5041-1.02726-1.2133-.72163-2.2471zm8.25201 9.2789c-.7046-.2136-1.231-.7006-1.2735-.7348l-1.85071-1.8626 3.60811-3.6313 3.6082 3.6313-1.8593 1.8711c-.5009.4956-1.2055 1.0339-2.2328.7263zm9.2198-8.3049c-.2122.7092-.6961 1.2389-.7301 1.2816l-1.8507 1.8627-3.6082-3.6313 3.6082-3.63122 1.8592 1.87112c.4924.5041 1.0273 1.2047.7216 2.2471z"
          fill="currentColor"
          fill-rule="evenodd"
        />
      </svg>
    </span>
  </div>
</div>
`;

exports[`Artifact WizardStep tests renders without crashing 1`] = `
<div>
  <div
    class="StepWizard--main existingDocker StepWizard--navBar"
  >
    <div
      class="StepWizard--navBarList"
    >
      <div
        class="StepWizard--navStep StepWizard--activeStep"
      >
        <span
          class="StepWizard--number"
        >
          1
        </span>
        <p
          class="StyledProps--font Text--lineclamp StyledProps--main StepWizard--stepName"
          style="--text-line-clamp: 2; width: 200px;"
        >
          connectors.artifactRepoType
        </p>
        <p
          class="StyledProps--font Text--lineclamp StyledProps--main StepWizard--stepName"
          style="--text-line-clamp: 2; width: 200px;"
        >
          <div
            class="subtitle"
            style="display: flex;"
          >
            <span
              class="bp3-icon StyledProps--main"
              data-icon="info"
            >
              <svg
                height="26"
                viewBox="0 0 12 12"
                width="26"
                xmlns="http://www.w3.org/2000/svg"
              >
                <defs />
                <path
                  clip-rule="evenodd"
                  d="M0 6c0 3.31371 2.68629 6 6 6s6-2.68629 6-6-2.68629-6-6-6-6 2.68629-6 6zm.75 0c0 2.8995 2.35051 5.25 5.25 5.25 2.8995 0 5.25-2.3505 5.25-5.25C11.25 3.10051 8.8995.75 6 .75 3.10051.75.75 3.10051.75 6zm4.2063 3.104v.646h2.6814v-.646l-.8357-.14355V4.20264H4.9563v.65112l.83569.14355v3.96314L4.9563 9.104zM6.802 1.75195v1.03052H5.79199V1.75195H6.802z"
                  fill-rule="evenodd"
                />
              </svg>
            </span>
            <span
              style="align-self: center;"
            >
              dockerRegistry
            </span>
          </div>
        </p>
      </div>
      <div
        class="StepWizard--navStep"
      >
        <span
          class="StepWizard--number"
        >
          2
        </span>
        <p
          class="StyledProps--font Text--lineclamp StyledProps--main StepWizard--stepName"
          style="--text-line-clamp: 2; width: 200px;"
        >
          connectors.artifactRepository
        </p>
      </div>
      <div
        class="StepWizard--navStep"
      >
        <span
          class="StepWizard--number"
        >
          3
        </span>
        <p
          class="StyledProps--font Text--lineclamp StyledProps--main StepWizard--stepName"
          style="--text-line-clamp: 2; width: 200px;"
        >
          Artifact Location
        </p>
      </div>
    </div>
    <div
      class="StepWizard--stepDetails"
    >
       
      <div
        class="StyledProps--font StyledProps--main optionsViewContainer"
      >
        <p
          class="StyledProps--font StyledProps--main StyledProps--font-variation-h3 StyledProps--margin-bottom-medium"
        >
          first step
        </p>
        <div
          class="OverlaySpinner--overlaySpinner"
        >
          <form>
            <div
              class="headerContainer"
            >
              <div
                class="Layout--horizontal Layout--layout-spacing-large StyledProps--main"
              >
                <div
                  class="bp3-form-group ThumbnailSelect--mainContainer thumbnailSelect"
                >
                  <div
                    class="bp3-form-content"
                  >
                    <div
                      class="Layout--horizontal Layout--layout-spacing-medium StyledProps--main"
                    >
                      <button
                        class="bp3-button bp3-minimal Button--button StyledProps--font StyledProps--main ThumbnailSelect--changeButton StyledProps--intent-primary Button--without-shadow Button--withLeftIcon"
                        data-testid="thumbnail-select-change"
                        type="button"
                      >
                        <span
                          class="bp3-icon StyledProps--main StyledProps--padding-right-xsmall"
                          data-icon="Edit"
                        >
                          <svg
                            height="12"
                            viewBox="0 0 16 16"
                            width="12"
                            xmlns="http://www.w3.org/2000/svg"
                          >
                            <path
                              clip-rule="evenodd"
                              d="M11.207.485a.5.5 0 0 1 .354-.146 3.5 3.5 0 0 1 3.5 3.5.5.5 0 0 1-.146.353l-11 11a.5.5 0 0 1-.354.147h-3a.5.5 0 0 1-.5-.5v-3a.5.5 0 0 1 .146-.354l11-11Zm.553.862L1.061 12.046v2.293h2.293l10.7-10.7a2.5 2.5 0 0 0-2.294-2.292Z"
                              fill="currentColor"
                              fill-rule="evenodd"
                            />
                            <path
                              clip-rule="evenodd"
                              d="M11.89 2.646a.5.5 0 0 1 0 .708L8.353 6.889a.5.5 0 0 1-.708-.707l3.536-3.536a.5.5 0 0 1 .707 0Z"
                              fill="currentColor"
                              fill-rule="evenodd"
                              opacity="0.3"
                            />
                          </svg>
                        </span>
                        <span
                          class="bp3-button-text"
                        >
                          Change
                        </span>
                      </button>
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="Layout--horizontal StyledProps--main"
            >
              <button
                class="bp3-button Button--button StyledProps--font StyledProps--main Button--with-current-color Button--withRightIcon Button--variation Button--variation-primary"
                type="submit"
              >
                <span
                  class="bp3-button-text"
                >
                  continue
                </span>
                <span
                  class="bp3-icon bp3-icon-chevron-right StyledProps--main"
                  icon="chevron-right"
                >
                  <svg
                    data-icon="chevron-right"
                    height="16"
                    viewBox="0 0 16 16"
                    width="16"
                  >
                    <desc>
                      chevron-right
                    </desc>
                    <path
                      d="M10.71 7.29l-4-4a1.003 1.003 0 00-1.42 1.42L8.59 8 5.3 11.29c-.19.18-.3.43-.3.71a1.003 1.003 0 001.71.71l4-4c.18-.18.29-.43.29-.71 0-.28-.11-.53-.29-.71z"
                      fill-rule="evenodd"
                    />
                  </svg>
                </span>
              </button>
            </div>
          </form>
        </div>
      </div>
    </div>
    <span
      class="bp3-icon StyledProps--main StepWizard--harnessWatermark StyledProps--color StyledProps--color-grey50"
      data-icon="harness-with-color"
    >
      <svg
        height="346"
        viewBox="0 0 25 25"
        width="346"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="m22.9736 8.18585-6.2654-6.30553c-.1103-.11108-1.0951-1.07656-2.5893-1.572117-2.1394-.717703-4.26188-.153793-5.98529 1.572117l-6.26542 6.30553c-.11036.11107-1.069701 1.10219-1.562105 2.60595-.713136 2.1531-.152815 4.2891 1.562105 6.0236l6.26542 6.3055c.11037.1111 1.09517 1.0766 2.58939 1.5807.6112.205 1.214.3076 1.8083.3076 1.5027 0 2.9459-.6408 4.1769-1.8797l6.2654-6.3056c.1104-.111 1.0698-1.1022 1.5622-2.6059.7131-2.1617.1528-4.2977-1.5622-6.03215zm-10.0688-4.4771c.7047.2136 1.231.70061 1.2735.73479l1.8508 1.86261-3.6082 3.63124-3.60811-3.63124 1.85921-1.87115c.5009-.49556 1.1971-1.03384 2.2328-.72625zm-9.21981 8.30485c.21225-.7092.69616-1.2389.73012-1.2816l1.85076-1.86262 3.60813 3.63122-3.60813 3.6313-1.85925-1.8712c-.4924-.5041-1.02726-1.2133-.72163-2.2471zm8.25201 9.2789c-.7046-.2136-1.231-.7006-1.2735-.7348l-1.85071-1.8626 3.60811-3.6313 3.6082 3.6313-1.8593 1.8711c-.5009.4956-1.2055 1.0339-2.2328.7263zm9.2198-8.3049c-.2122.7092-.6961 1.2389-.7301 1.2816l-1.8507 1.8627-3.6082-3.6313 3.6082-3.63122 1.8592 1.87112c.4924.5041 1.0273 1.2047.7216 2.2471z"
          fill="currentColor"
          fill-rule="evenodd"
        />
      </svg>
    </span>
  </div>
</div>
`;
